--- a/static/src/scss/backend_theme_breadcrumbs.scss
+++ b/static/src/scss/backend_theme_breadcrumbs.scss
@@ -50,7 +50,7 @@
 }
 
 // Dark mode
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: __disabled__) {
     .o_control_panel .breadcrumb {
         .breadcrumb-item {
             a {
