--- a/static/src/scss/backend_theme_selection.scss
+++ b/static/src/scss/backend_theme_selection.scss
@@ -92,7 +92,7 @@
 // --------------------------------------------------------------------------
 // Dark mode
 // --------------------------------------------------------------------------
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: __disabled__) {
     .o_web_client {
         select.o_input,
         .o_field_widget select {
